add more results. fix some typos and consistency errors

--- a/results.tex
+++ b/results.tex
@@ -137,3 +137,9 @@ the results were not so good for subsumption-based evaluation with identical spe
 \input{tables_path}
 
 \input{tables_model_checking}
+
+\section{Performance Evaluation for RCS}
+
+\input{tables_retro_overhead}
+
+\input{tables_retro_overhead_model}
