--- a/tables_model_checking.tex
+++ b/tables_model_checking.tex
@@ -1,4 +1,5 @@
 \begin{table}[ht]
+\centering
 \footnotesize{
   \begin{tabular}{c|ccc|ccc}
    \hline
@@ -25,6 +26,7 @@
 \end{table}
 
 \begin{table}[ht]
+\centering
 \footnotesize{
   \begin{tabular}{c|ccc|ccc}
    \hline
