--- a/tables_path.tex
+++ b/tables_path.tex
@@ -1,4 +1,5 @@
 \begin{table}[ht]
+\centering
 \footnotesize{
   \begin{tabular}{cc|ccc|ccc}
    \hline
@@ -39,126 +40,7 @@
 \end{table}
 
 \begin{table}[ht]
-\footnotesize{
-  \begin{tabular}{cc|ccc|ccc}
-   \hline
-    \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
-   \hline
-   \hline
-
-\multirow{3}{*}{\textbf{tree}} &  8192 &  28 & 28 &  1.000  & 28 & 28 &  1.000 \\
-&  16384 &  60 & 72 &  0.833  & 56 & 52 &  1.077 \\
-&  32768 &  136 & 172 &  0.791  & 124 & 132 &  0.939 \\
-\hline
-\multirow{3}{*}{\textbf{pyramid}} &  512 &  144 & 160 &  0.900  & 148 & 140 &  1.057 \\
-&  1024 &  576 & 720 &  0.800  & 688 & 640 &  1.075 \\
-&  2048 &  2336 & 2928 &  0.798  & 2884 & 2680 &  1.076 \\
-\hline
-\multirow{3}{*}{\textbf{grid}} &  16 &  36 & 52 &  0.692  & 28 & 40 &  0.700 \\
-&  32 &  728 & 896 &  0.812  & 656 & 652 &  1.006 \\
-&  64 &  13280 & 19977 &  0.665  & 10784 & 13428 &  0.803 \\
-\hline
-\multirow{3}{*}{\textbf{chain}} &  1024 &  160 & 204 &  0.784  & 156 & 152 &  1.026 \\
-&  2048 &  688 & 960 &  0.717  & 664 & 596 &  1.114 \\
-&  4096 &  2812 & 3864 &  0.728  & 2672 & 2468 &  1.083 \\
-\hline
-\multirow{3}{*}{\textbf{cycle}} &  1024 &  332 & 532 &  0.624  & 308 & 300 &  1.027 \\
-&  2048 &  1380 & 1888 &  0.731  & 1448 & 1284 &  1.128 \\
-&  4096 &  7000 & 9292 &  0.753  & 6812 & 6076 &  1.121 \\
-\hline
-\hline
-\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 0.775 & \multicolumn{2}{}{} & 1.015 \\ 
-\hline
-\hline
-\end{tabular}
-}
-\caption{Results for the program \texttt{path\_left\_last}.}
-\label{tbl:result_path_left_last}
-\end{table}
-
-\begin{table}[ht]
-\footnotesize{
-  \begin{tabular}{cc|ccc|ccc}
-   \hline
-    \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
-   \hline
-   \hline
-
-\multirow{3}{*}{\textbf{tree}} &  8192 &  32 & 36 &  0.889  & 32 & 44 &  0.727 \\
-&  16384 &  80 & 84 &  0.952  & 84 & 100 &  0.840 \\
-&  32768 &  164 & 184 &  0.891  & 192 & 236 &  0.814 \\
-\hline
-\multirow{3}{*}{\textbf{pyramid}} &  1024 &  664 & 596 &  1.114  & 656 & 680 &  0.965 \\
-&  2048 &  2604 & 2460 &  1.059  & 2624 & 2876 &  0.912 \\
-&  4096 &  10452 & 10104 &  1.034  & 11436 & 13104 &  0.873 \\
-\hline
-\multirow{3}{*}{\textbf{grid}} &  16 &  68 & 44 &  1.545  & 52 & 52 &  1.000 \\
-&  32 &  1116 & 936 &  1.192  & 880 & 852 &  1.033 \\
-&  64 &  20621 & 15288 &  1.349  & 15684 & 14392 &  1.090 \\
-\hline
-\multirow{3}{*}{\textbf{chain}} &  1024 &  180 & 180 &  1.000  & 184 & 216 &  0.852 \\
-&  2048 &  700 & 692 &  1.012  & 784 & 848 &  0.925 \\
-&  4096 &  2880 & 2860 &  1.007  & 3236 & 3392 &  0.954 \\
-\hline
-\multirow{3}{*}{\textbf{cycle}} &  1024 &  428 & 420 &  1.019  & 352 & 416 &  0.846 \\
-&  2048 &  1932 & 1764 &  1.095  & 1600 & 1748 &  0.915 \\
-&  4096 &  7352 & 7044 &  1.044  & 6564 & 6524 &  1.006 \\
-\hline
-\hline
-\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 1.080 & \multicolumn{2}{}{} & 0.917 \\ 
-\hline
-\hline
-\end{tabular}
-}
-\caption{Results for the program \texttt{path\_right\_first}.}
-\label{tbl:result_path_right_first}
-\end{table}
-
-\begin{table}[ht]
-\footnotesize{
-  \begin{tabular}{cc|ccc|ccc}
-   \hline
-    \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
-   \hline
-   \hline
-
-\multirow{3}{*}{\textbf{tree}} &  16384 &  80 & 124 &  0.645  & 92 & 156 &  0.590 \\
-&  32768 &  176 & 376 &  0.468  & 188 & 532 &  0.353 \\
-&  65536 &  360 & 1224 &  0.294  & 432 & 1304 &  0.331 \\
-\hline
-\multirow{3}{*}{\textbf{pyramid}} &  1024 &  656 & 624 &  1.051  & 676 & 724 &  0.934 \\
-&  2048 &  2652 & 2464 &  1.076  & 2852 & 2760 &  1.033 \\
-&  4096 &  10428 & 10016 &  1.041  & 15768 & 11472 &  1.374 \\
-\hline
-\multirow{3}{*}{\textbf{grid}} &  16 &  68 & 48 &  1.417  & 44 & 48 &  0.917 \\
-&  32 &  1132 & 856 &  1.322  & 944 & 716 &  1.318 \\
-&  64 &  17797 & 13304 &  1.338  & 18089 & 12056 &  1.500 \\
-\hline
-\multirow{3}{*}{\textbf{chain}} &  1024 &  172 & 188 &  0.915  & 200 & 204 &  0.980 \\
-&  2048 &  704 & 716 &  0.983  & 828 & 840 &  0.986 \\
-&  4096 &  2924 & 2728 &  1.072  & 3724 & 3592 &  1.037 \\
-\hline
-\multirow{3}{*}{\textbf{cycle}} &  1024 &  384 & 460 &  0.835  & 412 & 416 &  0.990 \\
-&  2048 &  1568 & 1800 &  0.871  & 1680 & 1652 &  1.017 \\
-&  4096 &  6876 & 7088 &  0.970  & 7436 & 6608 &  1.125 \\
-\hline
-\hline
-\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 0.953 & \multicolumn{2}{}{} & 0.966 \\ 
-\hline
-\hline
-\end{tabular}
-}
-\caption{Results for the program \texttt{path\_right\_last}.}
-\label{tbl:result_path_right_last}
-\end{table}
-
-\begin{table}[ht]
+\centering
 \footnotesize{
   \begin{tabular}{cc|ccc|ccc}
    \hline
@@ -199,6 +81,7 @@
 \end{table}
 
 \begin{table}[ht]
+\centering
 \footnotesize{
   \begin{tabular}{cc|ccc|ccc}
    \hline
@@ -208,37 +91,38 @@
    \hline
    \hline
 
-\multirow{3}{*}{\textbf{tree}} &  8192 &  132 & 148 &  0.892  & 112 & 188 &  0.596 \\
-&  16384 &  328 & 364 &  0.901  & 292 & 564 &  0.518 \\
-&  32768 &  776 & 948 &  0.819  & 728 & 1384 &  0.526 \\
+\multirow{3}{*}{\textbf{tree}} &  8192 &  32 & 36 &  0.889  & 32 & 44 &  0.727 \\
+&  16384 &  80 & 84 &  0.952  & 84 & 100 &  0.840 \\
+&  32768 &  164 & 184 &  0.891  & 192 & 236 &  0.814 \\
 \hline
-\multirow{3}{*}{\textbf{pyramid}} &  128 &  324 & 224 &  1.446  & 224 & 232 &  0.966 \\
-&  256 &  2520 & 1784 &  1.413  & 1820 & 1356 &  1.342 \\
-&  512 &  20293 & 14132 &  1.436  & 17485 & 12768 &  1.369 \\
+\multirow{3}{*}{\textbf{pyramid}} &  1024 &  664 & 596 &  1.114  & 656 & 680 &  0.965 \\
+&  2048 &  2604 & 2460 &  1.059  & 2624 & 2876 &  0.912 \\
+&  4096 &  10452 & 10104 &  1.034  & 11436 & 13104 &  0.873 \\
 \hline
-\multirow{3}{*}{\textbf{grid}} &  4 &  1 & 1 &  1.000  & 1 & 1 &  1.000 \\
-&  8 &  56 & 36 &  1.556  & 48 & 32 &  1.500 \\
-&  16 &  4036 & 2593 &  1.556  & 2644 & 1828 &  1.446 \\
+\multirow{3}{*}{\textbf{grid}} &  16 &  68 & 44 &  1.545  & 52 & 52 &  1.000 \\
+&  32 &  1116 & 936 &  1.192  & 880 & 852 &  1.033 \\
+&  64 &  20621 & 15288 &  1.349  & 15684 & 14392 &  1.090 \\
 \hline
-\multirow{3}{*}{\textbf{chain}} &  128 &  76 & 48 &  1.583  & 60 & 44 &  1.364 \\
-&  256 &  616 & 452 &  1.363  & 428 & 332 &  1.289 \\
-&  512 &  4968 & 3576 &  1.389  & 3708 & 2544 &  1.458 \\
+\multirow{3}{*}{\textbf{chain}} &  1024 &  180 & 180 &  1.000  & 184 & 216 &  0.852 \\
+&  2048 &  700 & 692 &  1.012  & 784 & 848 &  0.925 \\
+&  4096 &  2880 & 2860 &  1.007  & 3236 & 3392 &  0.954 \\
 \hline
-\multirow{3}{*}{\textbf{cycle}} &  128 &  468 & 288 &  1.625  & 304 & 232 &  1.310 \\
-&  256 &  3976 & 2568 &  1.548  & 2592 & 1808 &  1.434 \\
-&  512 &  30425 & 20569 &  1.479  & 30509 & 15184 &  2.009 \\
+\multirow{3}{*}{\textbf{cycle}} &  1024 &  428 & 420 &  1.019  & 352 & 416 &  0.846 \\
+&  2048 &  1932 & 1764 &  1.095  & 1600 & 1748 &  0.915 \\
+&  4096 &  7352 & 7044 &  1.044  & 6564 & 6524 &  1.006 \\
 \hline
 \hline
-\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 1.334 & \multicolumn{2}{}{} & 1.208 \\ 
+\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 1.080 & \multicolumn{2}{}{} & 0.917 \\ 
 \hline
 \hline
 \end{tabular}
 }
-\caption{Results for the program \texttt{path\_double\_last}.}
-\label{tbl:result_path_double_last}
+\caption{Results for the program \texttt{path\_right\_first}.}
+\label{tbl:result_path_right_first}
 \end{table}
 
 \begin{table}[ht]
+\centering
 \footnotesize{
   \begin{tabular}{cc|ccc|ccc}
    \hline
@@ -279,6 +163,7 @@
 \end{table}
 
 \begin{table}[ht]
+\centering
 \footnotesize{
   \begin{tabular}{cc|ccc|ccc}
    \hline
@@ -317,3 +202,127 @@
 \caption{Results for the program \texttt{genome}.}
 \label{tbl:result_genome}
 \end{table}
+
+\begin{table}[ht]
+\centering
+\footnotesize{
+  \begin{tabular}{cc|ccc|ccc}
+   \hline
+    \hline
+    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
+     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
+   \hline
+   \hline
+
+\multirow{3}{*}{\textbf{tree}} &  8192 &  132 & 148 &  0.892  & 112 & 188 &  0.596 \\
+&  16384 &  328 & 364 &  0.901  & 292 & 564 &  0.518 \\
+&  32768 &  776 & 948 &  0.819  & 728 & 1384 &  0.526 \\
+\hline
+\multirow{3}{*}{\textbf{pyramid}} &  128 &  324 & 224 &  1.446  & 224 & 232 &  0.966 \\
+&  256 &  2520 & 1784 &  1.413  & 1820 & 1356 &  1.342 \\
+&  512 &  20293 & 14132 &  1.436  & 17485 & 12768 &  1.369 \\
+\hline
+\multirow{3}{*}{\textbf{grid}} &  4 &  1 & 1 &  1.000  & 1 & 1 &  1.000 \\
+&  8 &  56 & 36 &  1.556  & 48 & 32 &  1.500 \\
+&  16 &  4036 & 2593 &  1.556  & 2644 & 1828 &  1.446 \\
+\hline
+\multirow{3}{*}{\textbf{chain}} &  128 &  76 & 48 &  1.583  & 60 & 44 &  1.364 \\
+&  256 &  616 & 452 &  1.363  & 428 & 332 &  1.289 \\
+&  512 &  4968 & 3576 &  1.389  & 3708 & 2544 &  1.458 \\
+\hline
+\multirow{3}{*}{\textbf{cycle}} &  128 &  468 & 288 &  1.625  & 304 & 232 &  1.310 \\
+&  256 &  3976 & 2568 &  1.548  & 2592 & 1808 &  1.434 \\
+&  512 &  30425 & 20569 &  1.479  & 30509 & 15184 &  2.009 \\
+\hline
+\hline
+\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 1.334 & \multicolumn{2}{}{} & 1.208 \\ 
+\hline
+\hline
+\end{tabular}
+}
+\caption{Results for the program \texttt{path\_double\_last}.}
+\label{tbl:result_path_double_last}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\footnotesize{
+  \begin{tabular}{cc|ccc|ccc}
+   \hline
+    \hline
+    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
+     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
+   \hline
+   \hline
+
+\multirow{3}{*}{\textbf{tree}} &  8192 &  28 & 28 &  1.000  & 28 & 28 &  1.000 \\
+&  16384 &  60 & 72 &  0.833  & 56 & 52 &  1.077 \\
+&  32768 &  136 & 172 &  0.791  & 124 & 132 &  0.939 \\
+\hline
+\multirow{3}{*}{\textbf{pyramid}} &  512 &  144 & 160 &  0.900  & 148 & 140 &  1.057 \\
+&  1024 &  576 & 720 &  0.800  & 688 & 640 &  1.075 \\
+&  2048 &  2336 & 2928 &  0.798  & 2884 & 2680 &  1.076 \\
+\hline
+\multirow{3}{*}{\textbf{grid}} &  16 &  36 & 52 &  0.692  & 28 & 40 &  0.700 \\
+&  32 &  728 & 896 &  0.812  & 656 & 652 &  1.006 \\
+&  64 &  13280 & 19977 &  0.665  & 10784 & 13428 &  0.803 \\
+\hline
+\multirow{3}{*}{\textbf{chain}} &  1024 &  160 & 204 &  0.784  & 156 & 152 &  1.026 \\
+&  2048 &  688 & 960 &  0.717  & 664 & 596 &  1.114 \\
+&  4096 &  2812 & 3864 &  0.728  & 2672 & 2468 &  1.083 \\
+\hline
+\multirow{3}{*}{\textbf{cycle}} &  1024 &  332 & 532 &  0.624  & 308 & 300 &  1.027 \\
+&  2048 &  1380 & 1888 &  0.731  & 1448 & 1284 &  1.128 \\
+&  4096 &  7000 & 9292 &  0.753  & 6812 & 6076 &  1.121 \\
+\hline
+\hline
+\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 0.775 & \multicolumn{2}{}{} & 1.015 \\ 
+\hline
+\hline
+\end{tabular}
+}
+\caption{Results for the program \texttt{path\_left\_last}.}
+\label{tbl:result_path_left_last}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\footnotesize{
+  \begin{tabular}{cc|ccc|ccc}
+   \hline
+    \hline
+    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
+     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
+   \hline
+   \hline
+
+\multirow{3}{*}{\textbf{tree}} &  16384 &  80 & 124 &  0.645  & 92 & 156 &  0.590 \\
+&  32768 &  176 & 376 &  0.468  & 188 & 532 &  0.353 \\
+&  65536 &  360 & 1224 &  0.294  & 432 & 1304 &  0.331 \\
+\hline
+\multirow{3}{*}{\textbf{pyramid}} &  1024 &  656 & 624 &  1.051  & 676 & 724 &  0.934 \\
+&  2048 &  2652 & 2464 &  1.076  & 2852 & 2760 &  1.033 \\
+&  4096 &  10428 & 10016 &  1.041  & 15768 & 11472 &  1.374 \\
+\hline
+\multirow{3}{*}{\textbf{grid}} &  16 &  68 & 48 &  1.417  & 44 & 48 &  0.917 \\
+&  32 &  1132 & 856 &  1.322  & 944 & 716 &  1.318 \\
+&  64 &  17797 & 13304 &  1.338  & 18089 & 12056 &  1.500 \\
+\hline
+\multirow{3}{*}{\textbf{chain}} &  1024 &  172 & 188 &  0.915  & 200 & 204 &  0.980 \\
+&  2048 &  704 & 716 &  0.983  & 828 & 840 &  0.986 \\
+&  4096 &  2924 & 2728 &  1.072  & 3724 & 3592 &  1.037 \\
+\hline
+\multirow{3}{*}{\textbf{cycle}} &  1024 &  384 & 460 &  0.835  & 412 & 416 &  0.990 \\
+&  2048 &  1568 & 1800 &  0.871  & 1680 & 1652 &  1.017 \\
+&  4096 &  6876 & 7088 &  0.970  & 7436 & 6608 &  1.125 \\
+\hline
+\hline
+\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 0.953 & \multicolumn{2}{}{} & 0.966 \\ 
+\hline
+\hline
+\end{tabular}
+}
+\caption{Results for the program \texttt{path\_right\_last}.}
+\label{tbl:result_path_right_last}
+\end{table}
+
