--- a/tables_path.tex
+++ b/tables_path.tex
@@ -5,39 +5,40 @@
    \hline
     \hline
     \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
+     \multicolumn{2}{c|}{} & \textbf{\textit{Var}} & \textbf{\textit{Sub}} & \textbf{\textit{Speedup}} & \textbf{\textit{Var}} & \textbf{\textit{Sub}} & \textbf{\textit{Speedup}} \\
    \hline
    \hline
-
-\multirow{3}{*}{\textbf{tree}} &  8192 &  28 & 32 &  0.875  & 28 & 28 &  1.000 \\
-&  16384 &  60 & 76 &  0.789  & 52 & 52 &  1.000 \\
-&  32768 &  140 & 164 &  0.854  & 124 & 132 &  0.939 \\
+\multirow{5}{*}{\textbf{double\_first}} &  \scriptsize{chain}  &  4976 & 3536 &  1.41  & 3636 & 2520 &  1.44 \\
+&  \scriptsize{cycle}  &  30885 & 25821 &  1.20  & 36122 & 14976 &  2.41 \\
+&  \scriptsize{grid}  &  3888 & 2744 &  1.42  & 2496 & 1832 &  1.36 \\
+&  \scriptsize{pyramid}  &  20281 & 14212 &  1.43  & 21353 & 13428 &  1.59 \\
+&  \scriptsize{tree}  &  784 & 988 &  0.79  & 716 & 1380 &  0.52 \\
 \hline
-\multirow{3}{*}{\textbf{pyramid}} &  1024 &  584 & 692 &  0.844  & 696 & 616 &  1.130 \\
-&  2048 &  2332 & 2944 &  0.792  & 2856 & 2680 &  1.066 \\
-&  4096 &  9548 & 15104 &  0.632  & 13716 & 14852 &  0.924 \\
+\multirow{5}{*}{\textbf{double\_last}} &  \scriptsize{chain}  &  5100 & 3528 &  1.45  & 3680 & 3048 &  1.21 \\
+&  \scriptsize{cycle}  &  30601 & 20293 &  1.51  & 30469 & 15172 &  2.01 \\
+&  \scriptsize{grid}  &  3896 & 2596 &  1.50  & 2492 & 1828 &  1.36 \\
+&  \scriptsize{pyramid}  &  20201 & 14196 &  1.42  & 17549 & 10724 &  1.64 \\
+&  \scriptsize{tree}  &  776 & 972 &  0.80  & 704 & 1368 &  0.51 \\
 \hline
-\multirow{3}{*}{\textbf{grid}} &  16 &  44 & 52 &  0.846  & 28 & 36 &  0.778 \\
-&  32 &  748 & 904 &  0.827  & 564 & 652 &  0.865 \\
-&  64 &  13864 & 18717 &  0.741  & 10116 & 13808 &  0.733 \\
+\multirow{5}{*}{\textbf{left\_first}} &  \scriptsize{chain}  &  2844 & 3908 &  0.73  & 2588 & 2416 &  1.07 \\
+&  \scriptsize{cycle}  &  5972 & 9364 &  0.64  & 6768 & 6056 &  1.12 \\
+&  \scriptsize{grid}  &  13504 & 15688 &  0.86  & 10140 & 11408 &  0.89 \\
+&  \scriptsize{pyramid}  &  9676 & 13552 &  0.71  & 12764 & 15012 &  0.85 \\
+&  \scriptsize{tree}  &  136 & 160 &  0.85  & 120 & 144 &  0.83 \\
 \hline
-\multirow{3}{*}{\textbf{chain}} &  1024 &  160 & 212 &  0.755  & 156 & 156 &  1.000 \\
-&  2048 &  660 & 908 &  0.727  & 636 & 620 &  1.026 \\
-&  4096 &  2748 & 3856 &  0.713  & 2652 & 2432 &  1.090 \\
-\hline
-\multirow{3}{*}{\textbf{cycle}} &  1024 &  336 & 560 &  0.600  & 324 & 304 &  1.066 \\
-&  2048 &  1372 & 1860 &  0.738  & 1500 & 1248 &  1.202 \\
-&  4096 &  6744 & 9176 &  0.735  & 6836 & 5972 &  1.145 \\
-\hline
-\hline
-\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 0.765 & \multicolumn{2}{}{} & 0.998 \\ 
+\multirow{5}{*}{\textbf{left\_last}} &  \scriptsize{chain}  &  2724 & 3996 &  0.68  & 2620 & 2476 &  1.06 \\
+&  \scriptsize{cycle}  &  6188 & 9744 &  0.64  & 6880 & 6104 &  1.13 \\
+&  \scriptsize{grid}  &  13404 & 15688 &  0.85  & 10164 & 11480 &  0.89 \\
+&  \scriptsize{pyramid}  &  2388 & 2920 &  0.82  & 2896 & 2692 &  1.08 \\
+&  \scriptsize{tree}  &  128 & 156 &  0.82  & 116 & 136 &  0.85 \\
 \hline
 \hline
 \end{tabular}
 }
-\caption{Results for the program \texttt{path\_left\_first}.}
-\label{tbl:result_path_left_first}
+\caption{Detailed benchmarks for call subsumption in SLG-WAM and YapTab.}
+\label{tbl:result_path_detail1}
 \end{table}
+
 
 \begin{table}[ht]
 \centering
@@ -46,283 +47,36 @@
    \hline
     \hline
     \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
+     \multicolumn{2}{c|}{} & \textbf{\textit{Var}} & \textbf{\textit{Sub}} & \textbf{\textit{Speedup}} & \textbf{\textit{Var}} & \textbf{\textit{Sub}} & \textbf{\textit{Speedup}} \\
    \hline
    \hline
-
-\multirow{3}{*}{\textbf{tree}} &  8192 &  140 & 140 &  1.000  & 108 & 212 &  0.509 \\
-&  16384 &  324 & 384 &  0.844  & 296 & 564 &  0.525 \\
-&  32768 &  784 & 960 &  0.817  & 712 & 1388 &  0.513 \\
+\multirow{5}{*}{\textbf{genome}} &  \scriptsize{chain}  &  9352 & 16 &  584.50  & 19277 & 20 &  963.85 \\
+&  \scriptsize{cycle}  &  2324 & 8 &  290.50  & 5860 & 8 &  732.50 \\
+&  \scriptsize{grid}  &  1076 & 8 &  134.50  & 1464 & 16 &  91.50 \\
+&  \scriptsize{pyramid}  &  1936 & 4 &  484.00  & 2240 & 8 &  280.00 \\
+&  \scriptsize{tree}  &  41646 & 28 &  1487.36  & 43674 & 48 &  909.88 \\
 \hline
-\multirow{3}{*}{\textbf{pyramid}} &  128 &  324 & 228 &  1.421  & 224 & 176 &  1.273 \\
-&  256 &  2772 & 1804 &  1.537  & 1828 & 1348 &  1.356 \\
-&  512 &  20225 & 17109 &  1.182  & 17517 & 13488 &  1.299 \\
+\multirow{5}{*}{\textbf{right\_first}} &  \scriptsize{chain}  &  2840 & 2836 &  1.00  & 3344 & 3412 &  0.98 \\
+&  \scriptsize{cycle}  &  6316 & 7108 &  0.89  & 6652 & 6888 &  0.97 \\
+&  \scriptsize{grid}  &  18061 & 15300 &  1.18  & 15756 & 18165 &  0.87 \\
+&  \scriptsize{pyramid}  &  12092 & 9804 &  1.23  & 11832 & 11452 &  1.03 \\
+&  \scriptsize{tree}  &  160 & 184 &  0.87  & 172 & 224 &  0.77 \\
 \hline
-\multirow{3}{*}{\textbf{grid}} &  4 &  1 & 1 &  1.000  & 1 & 1 &  1.000 \\
-&  8 &  56 & 36 &  1.556  & 44 & 32 &  1.375 \\
-&  16 &  4044 & 2576 &  1.570  & 2496 & 1820 &  1.371 \\
+\multirow{5}{*}{\textbf{right\_last}} &  \scriptsize{chain}  &  2812 & 2872 &  0.98  & 3692 & 3644 &  1.01 \\
+&  \scriptsize{cycle}  &  6368 & 6996 &  0.91  & 7528 & 6580 &  1.14 \\
+&  \scriptsize{grid}  &  19777 & 13400 &  1.48  & 18153 & 14260 &  1.27 \\
+&  \scriptsize{pyramid}  &  10392 & 10472 &  0.99  & 13076 & 11420 &  1.15 \\
+&  \scriptsize{tree}  &  \scriptsize{crashed} & 1244 &  ---  & 416 & 1336 &  0.31 \\
 \hline
-\multirow{3}{*}{\textbf{chain}} &  128 &  76 & 48 &  1.583  & 60 & 44 &  1.364 \\
-&  256 &  628 & 436 &  1.440  & 436 & 328 &  1.329 \\
-&  512 &  5076 & 3524 &  1.440  & 3592 & 2556 &  1.405 \\
-\hline
-\multirow{3}{*}{\textbf{cycle}} &  128 &  476 & 300 &  1.587  & 304 & 228 &  1.333 \\
-&  256 &  3896 & 3244 &  1.201  & 2596 & 1808 &  1.436 \\
-&  512 &  30697 & 26229 &  1.170  & 30529 & 15024 &  2.032 \\
-\hline
-\hline
-\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 1.290 & \multicolumn{2}{}{} & 1.208 \\ 
+\multirow{5}{*}{\textbf{samegen}} &  \scriptsize{chain}  &  23385 & 28 &  835.18  & 44 & 60 &  0.73 \\
+&  \scriptsize{cycle}  &  6176 & 12 &  514.67  & 32 & 28 &  1.14 \\
+&  \scriptsize{grid}  &  2228 & 1352 &  1.65  & 1436 & 1068 &  1.34 \\
+&  \scriptsize{pyramid}  &  2220 & 20 &  111.00  & 20 & 24 &  0.83 \\
+&  \scriptsize{tree}  &  7132 & 8828 &  0.81  & 4532 & 7620 &  0.59 \\
 \hline
 \hline
 \end{tabular}
 }
-\caption{Results for the program \texttt{path\_double\_first}.}
-\label{tbl:result_path_double_first}
+\caption{Detailed benchmarks for call subsumption in SLG-WAM and YapTab.}
+\label{tbl:result_path_detail2}
 \end{table}
-
-\begin{table}[ht]
-\centering
-\footnotesize{
-  \begin{tabular}{cc|ccc|ccc}
-   \hline
-    \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
-   \hline
-   \hline
-
-\multirow{3}{*}{\textbf{tree}} &  8192 &  32 & 36 &  0.889  & 32 & 44 &  0.727 \\
-&  16384 &  80 & 84 &  0.952  & 84 & 100 &  0.840 \\
-&  32768 &  164 & 184 &  0.891  & 192 & 236 &  0.814 \\
-\hline
-\multirow{3}{*}{\textbf{pyramid}} &  1024 &  664 & 596 &  1.114  & 656 & 680 &  0.965 \\
-&  2048 &  2604 & 2460 &  1.059  & 2624 & 2876 &  0.912 \\
-&  4096 &  10452 & 10104 &  1.034  & 11436 & 13104 &  0.873 \\
-\hline
-\multirow{3}{*}{\textbf{grid}} &  16 &  68 & 44 &  1.545  & 52 & 52 &  1.000 \\
-&  32 &  1116 & 936 &  1.192  & 880 & 852 &  1.033 \\
-&  64 &  20621 & 15288 &  1.349  & 15684 & 14392 &  1.090 \\
-\hline
-\multirow{3}{*}{\textbf{chain}} &  1024 &  180 & 180 &  1.000  & 184 & 216 &  0.852 \\
-&  2048 &  700 & 692 &  1.012  & 784 & 848 &  0.925 \\
-&  4096 &  2880 & 2860 &  1.007  & 3236 & 3392 &  0.954 \\
-\hline
-\multirow{3}{*}{\textbf{cycle}} &  1024 &  428 & 420 &  1.019  & 352 & 416 &  0.846 \\
-&  2048 &  1932 & 1764 &  1.095  & 1600 & 1748 &  0.915 \\
-&  4096 &  7352 & 7044 &  1.044  & 6564 & 6524 &  1.006 \\
-\hline
-\hline
-\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 1.080 & \multicolumn{2}{}{} & 0.917 \\ 
-\hline
-\hline
-\end{tabular}
-}
-\caption{Results for the program \texttt{path\_right\_first}.}
-\label{tbl:result_path_right_first}
-\end{table}
-
-\begin{table}[ht]
-\centering
-\footnotesize{
-  \begin{tabular}{cc|ccc|ccc}
-   \hline
-    \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
-   \hline
-   \hline
-
-\multirow{3}{*}{\textbf{tree}} &  2048 &  448 & 548 &  0.818  & 280 & 468 &  0.598 \\
-&  4096 &  \scriptsize{crashed} & 2144 &  ---  & 1176 & 1892 &  0.622 \\
-&  8192 &  7176 & 8928 &  0.804  & 4572 & 7612 &  0.601 \\
-\hline
-\multirow{3}{*}{\textbf{pyramid}} &  1024 &  144 & 8 &  18.000  & 4 & 4 &  1.000 \\
-&  2048 &  560 & 8 &  70.000  & 12 & 12 &  1.000 \\
-&  4096 &  2220 & 16 &  138.750  & 16 & 20 &  0.800 \\
-\hline
-\multirow{3}{*}{\textbf{grid}} &  8 &  8 & 4 &  2.000  & 8 & 8 &  1.000 \\
-&  16 &  132 & 80 &  1.650  & 84 & 64 &  1.312 \\
-&  32 &  2216 & 1388 &  1.597  & 1452 & 1104 &  1.315 \\
-\hline
-\multirow{3}{*}{\textbf{chain}} &  8192 &  1472 & 4 &  368.000  & 12 & 12 &  1.000 \\
-&  16384 &  5864 & 16 &  366.500  & 20 & 32 &  0.625 \\
-&  32768 &  23393 & 24 &  974.708  & 48 & 64 &  0.750 \\
-\hline
-\multirow{3}{*}{\textbf{cycle}} &  4096 &  380 & 4 &  95.000  & 1 & 4 &  0.250 \\
-&  8192 &  1516 & 4 &  379.000  & 16 & 1 &  16.000 \\
-&  16384 &  7296 & 12 &  608.000  & 32 & 28 &  1.143 \\
-\hline
-\hline
-\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 201.722 & \multicolumn{2}{}{} & 1.868 \\ 
-\hline
-\hline
-\end{tabular}
-}
-\caption{Results for the program \texttt{samegen}.}
-\label{tbl:result_samegen}
-\end{table}
-
-\begin{table}[ht]
-\centering
-\footnotesize{
-  \begin{tabular}{cc|ccc|ccc}
-   \hline
-    \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
-   \hline
-   \hline
-
-\multirow{3}{*}{\textbf{tree}} &  8192 &  2560 & 4 &  640.000  & 2648 & 12 &  220.667 \\
-&  16384 &  10104 & 16 &  631.500  & 10832 & 28 &  386.857 \\
-&  32768 &  40490 & 28 &  1446.071  & 53779 & 52 &  1034.212 \\
-\hline
-\multirow{3}{*}{\textbf{pyramid}} &  1024 &  128 & 1 &  128.000  & 128 & 1 &  128.000 \\
-&  2048 &  496 & 4 &  124.000  & 520 & 4 &  130.000 \\
-&  4096 &  1948 & 4 &  487.000  & 2540 & 8 &  317.500 \\
-\hline
-\multirow{3}{*}{\textbf{grid}} &  16 &  5 & 1 &  5.000  & 8 & 1 &  8.000 \\
-&  32 &  56 & 4 &  14.000  & 96 & 4 &  24.000 \\
-&  64 &  1076 & 8 &  134.500  & 1452 & 16 &  90.750 \\
-\hline
-\multirow{3}{*}{\textbf{chain}} &  4096 &  584 & 4 &  146.000  & 1028 & 4 &  257.000 \\
-&  8192 &  2340 & 8 &  292.500  & 5372 & 12 &  447.667 \\
-&  16384 &  9528 & 16 &  595.500  & 22625 & 12 &  1885.417 \\
-\hline
-\multirow{3}{*}{\textbf{cycle}} &  2048 &  153 & 1 &  153.000  & 256 & 4 &  64.000 \\
-&  4096 &  580 & 4 &  145.000  & 1044 & 4 &  261.000 \\
-&  8192 &  2396 & 12 &  199.667  & 4748 & 8 &  593.500 \\
-\hline
-\hline
-\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 342.783 & \multicolumn{2}{}{} & 389.905 \\ 
-\hline
-\hline
-\end{tabular}
-}
-\caption{Results for the program \texttt{genome}.}
-\label{tbl:result_genome}
-\end{table}
-
-\begin{table}[ht]
-\centering
-\footnotesize{
-  \begin{tabular}{cc|ccc|ccc}
-   \hline
-    \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
-   \hline
-   \hline
-
-\multirow{3}{*}{\textbf{tree}} &  8192 &  132 & 148 &  0.892  & 112 & 188 &  0.596 \\
-&  16384 &  328 & 364 &  0.901  & 292 & 564 &  0.518 \\
-&  32768 &  776 & 948 &  0.819  & 728 & 1384 &  0.526 \\
-\hline
-\multirow{3}{*}{\textbf{pyramid}} &  128 &  324 & 224 &  1.446  & 224 & 232 &  0.966 \\
-&  256 &  2520 & 1784 &  1.413  & 1820 & 1356 &  1.342 \\
-&  512 &  20293 & 14132 &  1.436  & 17485 & 12768 &  1.369 \\
-\hline
-\multirow{3}{*}{\textbf{grid}} &  4 &  1 & 1 &  1.000  & 1 & 1 &  1.000 \\
-&  8 &  56 & 36 &  1.556  & 48 & 32 &  1.500 \\
-&  16 &  4036 & 2593 &  1.556  & 2644 & 1828 &  1.446 \\
-\hline
-\multirow{3}{*}{\textbf{chain}} &  128 &  76 & 48 &  1.583  & 60 & 44 &  1.364 \\
-&  256 &  616 & 452 &  1.363  & 428 & 332 &  1.289 \\
-&  512 &  4968 & 3576 &  1.389  & 3708 & 2544 &  1.458 \\
-\hline
-\multirow{3}{*}{\textbf{cycle}} &  128 &  468 & 288 &  1.625  & 304 & 232 &  1.310 \\
-&  256 &  3976 & 2568 &  1.548  & 2592 & 1808 &  1.434 \\
-&  512 &  30425 & 20569 &  1.479  & 30509 & 15184 &  2.009 \\
-\hline
-\hline
-\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 1.334 & \multicolumn{2}{}{} & 1.208 \\ 
-\hline
-\hline
-\end{tabular}
-}
-\caption{Results for the program \texttt{path\_double\_last}.}
-\label{tbl:result_path_double_last}
-\end{table}
-
-\begin{table}[ht]
-\centering
-\footnotesize{
-  \begin{tabular}{cc|ccc|ccc}
-   \hline
-    \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
-   \hline
-   \hline
-
-\multirow{3}{*}{\textbf{tree}} &  8192 &  28 & 28 &  1.000  & 28 & 28 &  1.000 \\
-&  16384 &  60 & 72 &  0.833  & 56 & 52 &  1.077 \\
-&  32768 &  136 & 172 &  0.791  & 124 & 132 &  0.939 \\
-\hline
-\multirow{3}{*}{\textbf{pyramid}} &  512 &  144 & 160 &  0.900  & 148 & 140 &  1.057 \\
-&  1024 &  576 & 720 &  0.800  & 688 & 640 &  1.075 \\
-&  2048 &  2336 & 2928 &  0.798  & 2884 & 2680 &  1.076 \\
-\hline
-\multirow{3}{*}{\textbf{grid}} &  16 &  36 & 52 &  0.692  & 28 & 40 &  0.700 \\
-&  32 &  728 & 896 &  0.812  & 656 & 652 &  1.006 \\
-&  64 &  13280 & 19977 &  0.665  & 10784 & 13428 &  0.803 \\
-\hline
-\multirow{3}{*}{\textbf{chain}} &  1024 &  160 & 204 &  0.784  & 156 & 152 &  1.026 \\
-&  2048 &  688 & 960 &  0.717  & 664 & 596 &  1.114 \\
-&  4096 &  2812 & 3864 &  0.728  & 2672 & 2468 &  1.083 \\
-\hline
-\multirow{3}{*}{\textbf{cycle}} &  1024 &  332 & 532 &  0.624  & 308 & 300 &  1.027 \\
-&  2048 &  1380 & 1888 &  0.731  & 1448 & 1284 &  1.128 \\
-&  4096 &  7000 & 9292 &  0.753  & 6812 & 6076 &  1.121 \\
-\hline
-\hline
-\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 0.775 & \multicolumn{2}{}{} & 1.015 \\ 
-\hline
-\hline
-\end{tabular}
-}
-\caption{Results for the program \texttt{path\_left\_last}.}
-\label{tbl:result_path_left_last}
-\end{table}
-
-\begin{table}[ht]
-\centering
-\footnotesize{
-  \begin{tabular}{cc|ccc|ccc}
-   \hline
-    \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} & \textbf{\textit{Variant}} & \textbf{\textit{Subsumptive}} & \textbf{\textit{Speedup}} \\
-   \hline
-   \hline
-
-\multirow{3}{*}{\textbf{tree}} &  16384 &  80 & 124 &  0.645  & 92 & 156 &  0.590 \\
-&  32768 &  176 & 376 &  0.468  & 188 & 532 &  0.353 \\
-&  65536 &  360 & 1224 &  0.294  & 432 & 1304 &  0.331 \\
-\hline
-\multirow{3}{*}{\textbf{pyramid}} &  1024 &  656 & 624 &  1.051  & 676 & 724 &  0.934 \\
-&  2048 &  2652 & 2464 &  1.076  & 2852 & 2760 &  1.033 \\
-&  4096 &  10428 & 10016 &  1.041  & 15768 & 11472 &  1.374 \\
-\hline
-\multirow{3}{*}{\textbf{grid}} &  16 &  68 & 48 &  1.417  & 44 & 48 &  0.917 \\
-&  32 &  1132 & 856 &  1.322  & 944 & 716 &  1.318 \\
-&  64 &  17797 & 13304 &  1.338  & 18089 & 12056 &  1.500 \\
-\hline
-\multirow{3}{*}{\textbf{chain}} &  1024 &  172 & 188 &  0.915  & 200 & 204 &  0.980 \\
-&  2048 &  704 & 716 &  0.983  & 828 & 840 &  0.986 \\
-&  4096 &  2924 & 2728 &  1.072  & 3724 & 3592 &  1.037 \\
-\hline
-\multirow{3}{*}{\textbf{cycle}} &  1024 &  384 & 460 &  0.835  & 412 & 416 &  0.990 \\
-&  2048 &  1568 & 1800 &  0.871  & 1680 & 1652 &  1.017 \\
-&  4096 &  6876 & 7088 &  0.970  & 7436 & 6608 &  1.125 \\
-\hline
-\hline
-\multicolumn{2}{c|}{\textit{Average}} & \multicolumn{2}{}{} & 0.953 & \multicolumn{2}{}{} & 0.966 \\ 
-\hline
-\hline
-\end{tabular}
-}
-\caption{Results for the program \texttt{path\_right\_last}.}
-\label{tbl:result_path_right_last}
-\end{table}
-
