--- a/tables_retro_overhead_model.tex
+++ b/tables_retro_overhead_model.tex
@@ -1,54 +1,25 @@
 \begin{table}[ht]
 \centering
 \footnotesize{
-  \begin{tabular}{c|c|cc|cc}
+  \begin{tabular}{cc|c|cc|cc}
    \hline
     \hline
-    \multicolumn{1}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \textbf{\small{Retro}} & \multicolumn{2}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{2}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{1}{c|}{} & \scriptsize{\textit{milliseconds}} & \textbf{\textit{\scriptsize{Var / Retro}}} & \textbf{\textit{\scriptsize{Sub / Retro}}} & \textbf{\textit{\scriptsize{Var / Retro}}} & \textbf{\textit{\scriptsize{Sub / Retro}}} \\
+    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \textbf{\small{Retro}} & \multicolumn{2}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{2}{c}{\small{\textbf{YapTab}}} \\
+     \multicolumn{2}{c|}{} & \scriptsize{\textit{milliseconds}} & \textbf{\textit{\scriptsize{Var / Retro}}} & \textbf{\textit{\scriptsize{Sub / Retro}}} & \textbf{\textit{\scriptsize{Var / Retro}}} & \textbf{\textit{\scriptsize{Sub / Retro}}} \\
    \hline
    \hline
 
-\multirow{1}{*}{\textbf{iproto}} &  1576 &  1.865  &  1.609  &  0.754 & 0.914 \\
+\multirow{3}{*}{\textbf{reach\_first}} &  iproto &  1576 &  1.87  &  1.61  &  0.75 & 0.91 \\
+&  leader &  2644 &  2.21  &  2.28  &  0.82 & 0.92 \\
+&  sieve &  15496 &  1.07  &  1.51  &  0.92 & 0.97 \\
 \hline
-\multirow{1}{*}{\textbf{leader}} &  2644 &  2.210  &  2.284  &  0.823 & 0.915 \\
-\hline
-\multirow{1}{*}{\textbf{sieve}} &  15496 &  1.074  &  1.511  &  0.918 & 0.972 \\
-\hline
-\hline
-\multicolumn{1}{c}{\textit{Average}} & & 1.716 & 1.801 & 0.832 & 0.934 \\ 
+\multirow{3}{*}{\textbf{reach\_last}} &  iproto &  1592 &  1.44  &  1.62  &  0.74 & 0.91 \\
+&  leader &  2680 &  2.16  &  2.24  &  0.81 & 0.90 \\
+&  sieve &  15388 &  1.34  &  1.25  &  1.10 & 0.96 \\
 \hline
 \hline
 \end{tabular}
 }
-\caption{Results for the program \texttt{reach\_left\_first}.}
-\label{tbl:prefix_reach_left_first}
+\caption{Detailed overhead results.}
+\label{tbl:overhead_detail_model}
 \end{table}
-
-\begin{table}[ht]
-\centering
-\footnotesize{
-  \begin{tabular}{c|c|cc|cc}
-   \hline
-    \hline
-    \multicolumn{1}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \textbf{\small{Retro}} & \multicolumn{2}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{2}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{1}{c|}{} & \scriptsize{\textit{milliseconds}} & \textbf{\textit{\scriptsize{Var / Retro}}} & \textbf{\textit{\scriptsize{Sub / Retro}}} & \textbf{\textit{\scriptsize{Var / Retro}}} & \textbf{\textit{\scriptsize{Sub / Retro}}} \\
-   \hline
-   \hline
-
-\multirow{1}{*}{\textbf{iproto}} &  1592 &  1.442  &  1.618  &  0.736 & 0.912 \\
-\hline
-\multirow{1}{*}{\textbf{leader}} &  2680 &  2.163  &  2.236  &  0.806 & 0.900 \\
-\hline
-\multirow{1}{*}{\textbf{sieve}} &  15388 &  1.342  &  1.255  &  1.096 & 0.958 \\
-\hline
-\hline
-\multicolumn{1}{c}{\textit{Average}} & & 1.649 & 1.703 & 0.879 & 0.923 \\ 
-\hline
-\hline
-\end{tabular}
-}
-\caption{Results for the program \texttt{reach\_left\_last}.}
-\label{tbl:prefix_reach_left_last}
-\end{table}
-
